Fix: Scrollbar shows correctly now

--- a/renderer/assets/css/styles.css
+++ b/renderer/assets/css/styles.css
@@ -590,18 +590,25 @@ body:not(.maximized) .titlebar-close:hover {
 }
 
 /* ===== HEADER ===== */
-header {
-  top: 32px; /* titlebar on top */
+.main-wrapper {
   position: fixed;
-
   left: var(--sidebar-width-expanded);
+  top: 40px; /* 32px = Start right at titlebar + 8px step for scroll gap */
+  right: 0;
+  bottom: 0;
+  overflow-y: auto;
+  transition: left var(--transition-normal);
+}
+
+header {
+  position: sticky;
+  top: 0;
+  left: 0;
   right: 0;
   height: var(--header-height);
   padding: var(--header-padding);
   color: var(--color-text-secondary);
   background-color: var(--color-bg-primary);
-  /* border-bottom: 1px solid var(--color-obj-secondary); */
-  transition: left var(--transition-normal);
   z-index: 50;
 }
 
@@ -732,17 +739,14 @@ header {
 
 /* ===== MAIN CONTENT ===== */
 .page-content {
-  margin-left: var(--sidebar-width-expanded);
-  margin-top: calc(var(--header-height) + 32px); /* 32px for titlebar */
+  position: relative;
+  margin: 0;
   padding-inline: var(--spacing-xl);
   padding-top: var(--spacing-md);
-  /* min-height: calc(100vh - var(--header-height)); ERROR SOMEWHERE DUE TO MARGINS */
-  transition: margin-left var(--transition-normal);
-  overflow-y: auto;
 }
 
 .sidebar-container.collapsed ~ .page-content {
-  margin-left: var(--sidebar-width-collapsed);
+  left: var(--sidebar-width-collapsed);
 }
 
 /* ===== TYPOGRAPHY ===== */
